service/tests/requests/snapshots/products/cannot_create_product_without_permission@products.snap
---
source: tests/requests/products.rs
expression: "(response.status_code(), response.text())"
---
(
    403,
    "{\"error\":\"You do not have permission to perform this action.\",\"code\":\"forbidden\"}",
)
