service/tests/requests/snapshots/products/cannot_get_product_detail_when_pid_does_not_exist@products.snap
---
source: tests/requests/products.rs
expression: "(response.status_code(), response.text())"
---
(
    404,
    "{\"error\":\"Entity not found\",\"code\":\"entity_not_found\"}",
)
