service/tests/requests/snapshots/products/cannot_get_product_detail_when_pid_is_invalid@products.snap
---
source: tests/requests/products.rs
expression: "(response.status_code(), response.text())"
---
(
    400,
    "{\"error\":\"The supplied resource identifier is invalid.\",\"code\":\"invalid_path_parameter\",\"field\":\"pid\"}",
)
