service/tests/requests/snapshots/products/cannot_list_product_attributes_without_credentials@products.snap
---
source: tests/requests/products.rs
expression: "(response.status_code(), response.text())"
---
(
    401,
    "{\"error\":\"Authentication is required. Please sign in and try again.\",\"code\":\"missing_credentials\"}",
)
