service/tests/requests/snapshots/products/cannot_list_product_attributes_without_permission@products.snap
---
source: tests/requests/products.rs
expression: "(response.status_code(), response.text())"
---
(
    403,
    "{\"error\":\"Forbidden\"}",
)
