service/tests/requests/snapshots/products/cannot_list_products_with_invalid_query@products.snap
---
source: tests/requests/products.rs
expression: "(response.status_code(), response.text())"
---
(
    400,
    "{\"error\":\"One or more fields failed validation\",\"code\":\"validation_error\",\"details\":{\"limit\":\"Limit must be a positive integer\"}}",
)
