service/tests/requests/snapshots/products/cannot_list_products_without_credentials@products.snap
---
source: tests/requests/products.rs
expression: "(response.status_code(), response.text())"
---
(
    401,
    "{\"error\":\"Missing credentials\"}",
)
